numpy/typing/tests/data/fail/modules.py
import numpy as np

np.testing.bob  # E: Module has no attribute
